--- a/scripts/config.yaml
+++ b/scripts/config.yaml
@@ -41,11 +41,9 @@ paw_colors:
       - '#5c285c'
       - '#991999'
     line:
-      - '#828282'
-      - '#7b7b7b'
-      - '#737373'
-      - '#533953'
-      - '#5c285c'
+      vertical:
+        - '#533953'
+        - '#5c285c'
     triangle:
       - '#828282'
       - '#7b7b7b'
